[build-system]
requires = ["setuptools >=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "Radial-Bias"
version = "0.1.0"
description = "A simple Python project library."
authors = [{name = "Raunak", email = "raunakgola9082@gmail.com"}]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "requests >=2.25.1",
    "numpy >=1.20.0"
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[project.urls]
Homepage = "https://github.com/raunakgola/Radial-Bias"
Issues = "https://github.com/raunakgola/Radial-Bias/issues"